# WSS-Scanner

./: CMakeLists.txt  QUICKSTART.md  README.md  build.bat  wss_demo.py  获取EXE指南.md
.github/workflows/: build.yml
include/gui/: MainWindow.h
include/monitor/: RealTimeMonitor.h
include/quarantine/: QuarantineManager.h
include/scanner/: FileScanner.h  SignatureDB.h
include/utils/: HashCalculator.h  Logger.h
signatures/: wss.db
src/: main.cpp
src/gui/: MainWindow.cpp
src/monitor/: RealTimeMonitor.cpp
src/quarantine/: QuarantineManager.cpp
src/scanner/: FileScanner.cpp  SignatureDB.cpp
src/utils/: HashCalculator.cpp  Logger.cpp
